# Pipeline_ETL_HospitalRecords

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
