[project]
name = "pipelinehospitalrecords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaggle>=2.2.1",
    "kagglehub>=1.0.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
]
